admission/ValidatingAdmissionPolicy/policies/image-digest/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-digest-ephemeralcontainers
  annotations:
    kubeapt.io/uuid: "416403a0-7869-4716-8011-97d7f49b1a71"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test image-digest-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/image-digest/ephemeralcontainers/deny-kubectl-debug-custom.yaml
