admission/ValidatingAdmissionPolicy/policies/image-digest/ephemeralcontainers/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-digest-ephemeralcontainers
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test image-digest-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/image-digest/ephemeralcontainers/test-kubectl-debug-custom.yaml
